# owe

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  codeql.yml  docker.yml  release.yml  tests.yml  zizmor.yml
html/: index.html  main.js
iou/: __init__.py  app.py  blueprints.py  config.py  database.py  iou.py  record.py  telegram.py  user.py
iou/scripts/: iou_dump.py  iou_users.py
iou/static/: main.js
owe/: __init__.py  database.py  money.py  owe.py  record.py  summary_transaction.py  telegram.py  telegram_announcer.py  user.py
owe/app/: __init__.py  api.py  app.py  config.py  schema.py  static.py  telegram_announcer.py
owe/app/static/: index.html  main.js
owe/cli/: __main__.py  owe.py  owe_dump.py  owe_users.py
owe/scripts/: owe_dump.py  owe_users.py
scripts/: dump.py  iou-users.py
src/: app.py
src/owe/: __init__.py  database.py  owe.py  record.py  summary_transaction.py  user.py
src/owe/app/: api.py  app.py  config.py  redacting_filter.py  schema.py  static.py  telegram_announcer.py
src/owe/app/static/: main.js
src/owe/cli/: __init__.py  owe.py
static/: index.html
templates/: main.js
tests/: test_database.py  test_owe.py
tests/app/: test_api.py
