[project]
name = "owe"
version = "0.1.0"
authors = [{ name = "Ruoyu Zhong", email = "zhongruoyu@outlook.com" }]
description = "Bill splitter and tracker."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = ["flask>=3.1.3", "flask-cors>=6.0.2", "requests>=2.34.2"]
keywords = ["bill tracking", "bill splitting", "bill tracker", "bill splitter"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ZhongRuoyu/owe"
Repository = "https://github.com/ZhongRuoyu/owe.git"

[project.scripts]
owe-dump = "owe.scripts.owe_dump:main"
owe-users = "owe.scripts.owe_users:main"

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.14", "ty>=0.0.39"]

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "P7D"

[tool.uv.build-backend]
module-name = "owe"
module-root = ""
