[project]
name = "owe"
version = "0.1.0"
authors = [{ name = "Ruoyu Zhong", email = "zhongruoyu@outlook.com" }]
description = "Bill splitter and tracker."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.136.3",
  "pydantic>=2.13.4",
  "python-telegram-bot>=22.7",
  "starlette>=1.2.1",
]
keywords = [
  "bill tracking",
  "bill splitting",
  "bill tracker",
  "bill splitter",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ZhongRuoyu/owe"
Repository = "https://github.com/ZhongRuoyu/owe.git"

[project.scripts]
owe = "owe.cli:main"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.15.14",
  "ty>=0.0.39",
]
fastapi-dev = [
  "fastapi-cli>=0.0.24",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "P7D"

[tool.uv.build-backend]
module-name = "owe"
module-root = ""
